2004-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/pwg/advanced-clock.xml:
	* docs/pwg/advanced-dparams.xml:
	* docs/pwg/advanced-events.xml:
	* docs/pwg/advanced-interfaces.xml:
	* docs/pwg/advanced-midi.xml:
	* docs/pwg/advanced-request.xml:
	* docs/pwg/advanced-scheduling.xml:
	* docs/pwg/advanced-tagging.xml:
	* docs/pwg/advanced-types.xml:
	* docs/pwg/appendix-checklist.xml:
	* docs/pwg/building-boiler.xml:
	* docs/pwg/building-chainfn.xml:
	* docs/pwg/building-filterfactory.xml:
	* docs/pwg/building-pads.xml:
	* docs/pwg/building-props.xml:
	* docs/pwg/building-signals.xml:
	* docs/pwg/building-state.xml:
	* docs/pwg/building-testapp.xml:
	* docs/pwg/intro-basics.xml:
	* docs/pwg/intro-preface.xml:
	* docs/pwg/other-autoplugger.xml:
	* docs/pwg/other-sink.xml:
	* docs/pwg/other-source.xml:
	* docs/pwg/titlepage.xml:
          fix up id's

2004-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/95NonPath:
	* docs/HACKING:
	* docs/README:
	* docs/building-the-docs-on-debian:
          collect relevant bits of doc info

2004-01-28  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/advanced_tagging.xml:
	  Half-assed commit so Thomas can re-arrange document IDs here to be
	  consistent, too.

2004-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/manual/autoplugging.xml:
	* docs/manual/bins-api.xml:
	* docs/manual/bins.xml:
	* docs/manual/buffers-api.xml:
	* docs/manual/buffers.xml:
	* docs/manual/clocks.xml:
	* docs/manual/components.xml:
	* docs/manual/cothreads.xml:
	* docs/manual/debugging.xml:
	* docs/manual/dparams-app.xml:
	* docs/manual/dynamic.xml:
	* docs/manual/elements-api.xml:
	* docs/manual/elements.xml:
	* docs/manual/factories.xml:
	* docs/manual/gnome.xml:
	* docs/manual/goals.xml:
	* docs/manual/helloworld.xml:
	* docs/manual/helloworld2.xml:
	* docs/manual/init-api.xml:
	* docs/manual/intro.xml:
	* docs/manual/links-api.xml:
	* docs/manual/links.xml: