@@ -1,3 +1,7 @@
+2004-01-28  Julien MOUTTE <julien@moutte.net>
+
+	* docs/pwg/advanced-interfaces.xml: Adding XOverlay documentation.
+
 2004-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* docs/pwg/advanced-clock.xml:
